Added initial stream and serialization functionality

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,38 @@
 *.exe
 *.out
 *.app
+/CMakeFiles/3.2.0-rc1/CompilerIdC/Debug/CompilerIdC.tlog/*.tlog
+/*.vcxproj
+/*.filters
+/CMakeCache.txt
+/CMakeFiles/3.2.0-rc1/*.cmake
+/CMakeFiles/3.2.0-rc1/*.bin
+/NimbusIO.dir/Debug/NimbusIO.tlog/*.tlog
+/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/*.tlog
+/*.cmake
+/CMakeFiles/3.2.0-rc1/CompilerIdC/*.vcxproj
+/CMakeFiles/3.2.0-rc1/CompilerIdC/CMakeCCompilerId.c
+/CMakeFiles/3.2.0-rc1/CompilerIdC/Debug/CompilerIdC.tlog/CompilerIdC.lastbuildstate
+/CMakeFiles/3.2.0-rc1/CompilerIdCXX/CMakeCXXCompilerId.cpp
+/CMakeFiles/3.2.0-rc1/CompilerIdCXX/CompilerIdCXX.vcxproj
+/CMakeFiles/3.2.0-rc1/CompilerIdCXX/Debug/CompilerIdCXX.tlog/CL.read.1.tlog
+/CMakeFiles/3.2.0-rc1/CompilerIdCXX/Debug/CompilerIdCXX.tlog/CL.write.1.tlog
+/CMakeFiles/3.2.0-rc1/CompilerIdCXX/Debug/CompilerIdCXX.tlog/CompilerIdCXX.lastbuildstate
+/CMakeFiles/3.2.0-rc1/CompilerIdCXX/Debug/CompilerIdCXX.tlog/cl.command.1.tlog
+/CMakeFiles/3.2.0-rc1/CompilerIdCXX/Debug/CompilerIdCXX.tlog/link.command.1.tlog
+/CMakeFiles/3.2.0-rc1/CompilerIdCXX/Debug/CompilerIdCXX.tlog/link.read.1.tlog
+/CMakeFiles/3.2.0-rc1/CompilerIdCXX/Debug/CompilerIdCXX.tlog/link.write.1.tlog
+/CMakeFiles/TargetDirectories.txt
+/CMakeFiles/cmake.check_cache
+/CMakeFiles/e56c924f0d7106ecc696f664144ab803/generate.stamp.rule
+/CMakeFiles/feature_tests.bin
+/CMakeFiles/feature_tests.cxx
+/CMakeFiles/generate.stamp
+/CMakeFiles/generate.stamp.depend
+/CMakeFiles/generate.stamp.list
+/CMakeLists.txt
+/NimbusIO.dir/Debug/NimbusIO.tlog/NimbusIO.lastbuildstate
+/NimbusIO.opensdf
+/NimbusIO.sdf
+/NimbusIO.sln
+/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/ZERO_CHECK.lastbuildstate
